--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ flyway                          = "11.17.1"
 gradle-ktlint                   = "13.1.0"
 kotest                          = "6.0.5"
 kotlin                          = "2.2.21"
+kover                           = "0.9.3"
 postgresql                      = "42.7.8"
 postgresql-test-containers      = "1.21.3"
 spring                          = "4.0.0"
@@ -36,3 +37,4 @@ gradle-ktlint                   = { id = "org.jlleitschuh.gradle.ktlint", versio
 kotlin-jpa                      = { id = "org.jetbrains.kotlin.plugin.jpa", version.ref = "kotlin" }
 kotlin-spring                   = { id = "org.jetbrains.kotlin.plugin.spring", version.ref = "kotlin" }
 kotlin-jvm                      = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+kover                           = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
