--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 # Keep alphabetical and formatted correctly please
 [versions]
 archunit-junit5                 = "1.4.1"
+dokka                           = "2.1.0"
 flyway                          = "11.18.0"
 gradle-ktlint                   = "14.0.1"
 kotest                          = "6.0.5"
@@ -35,6 +36,7 @@ spring-test                     = ["spring-boot-starter-data-jpa", "spring-boot-
 db-test                         = ["flyway-database-psql", "postgresql-testcontainers", "postgresql"]
 
 [plugins]
+dokka                           = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 gradle-ktlint                   = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "gradle-ktlint" }
 kotlin-jpa                      = { id = "org.jetbrains.kotlin.plugin.jpa", version.ref = "kotlin" }
 kotlin-spring                   = { id = "org.jetbrains.kotlin.plugin.spring", version.ref = "kotlin" }
