maven central release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,8 @@ jobs:
     needs: [ test ]
     uses: ./.github/workflows/publish.yml
     permissions:
-      contents: write
-      packages: write
+      contents: read
+    secrets: inherit
 
   docs:
     needs: [ publish ]
