--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ archunit-junit5                 = "1.4.1"
 dokka                           = "2.1.0"
 flyway                          = "11.18.0"
 gradle-ktlint                   = "14.0.1"
+gradle-nexus-publish-plugin     = "2.0.0"
 kotest                          = "6.0.5"
 kotlin                          = "2.2.21"
 kover                           = "0.9.3"
@@ -38,6 +39,7 @@ db-test                         = ["flyway-database-psql", "postgresql-testconta
 [plugins]
 dokka                           = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 gradle-ktlint                   = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "gradle-ktlint" }
+gradle-nexus-publish-plugin     = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "gradle-nexus-publish-plugin" }
 kotlin-jpa                      = { id = "org.jetbrains.kotlin.plugin.jpa", version.ref = "kotlin" }
 kotlin-spring                   = { id = "org.jetbrains.kotlin.plugin.spring", version.ref = "kotlin" }
 kotlin-jvm                      = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
