--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,6 @@
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.configuration-cache=true
+
 kotlin.code.style=official
+kotlin.incremental=true
